<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".ui.login.LoginActivity">





        <TextView
            android:id="@+id/tvHeading"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"

            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent"

            />



        <LinearLayout
            android:id="@+id/clInputFields"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvHeading"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/emailt"/>
                    <LinearLayout
                        android:id="@+id/llEmailID"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="vertical" >

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            app:cardBackgroundColor="@color/blueLight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">



                        <EditText
                            android:padding="@dimen/_2sdp"
                            android:drawablePadding="@dimen/_14sdp"
                            android:drawableStart="@drawable/ic_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/etEmail"
                            android:background="@null"
                            android:textColorHint="@color/white"
                            android:textColor="@color/white"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            app:layout_constraintTop_toBottomOf="@id/tvHeading" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/password"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="0.5"
                        android:id="@+id/llPassword"
                        android:layout_height="@dimen/_30sdp"
                        android:orientation="vertical" >

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="@dimen/_5sdp"
                            app:cardBackgroundColor="@color/blueLight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">




                        <EditText
                            android:padding="@dimen/_2sdp"
                            android:drawablePadding="@dimen/_14sdp"
                            android:drawableStart="@drawable/ic_key"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/password_input"
                            android:background="@null"
                            android:textColorHint="@color/white"
                            android:textColor="@color/white"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>









        </LinearLayout>


        <TextView
            android:id="@+id/tvForget"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:text="@string/forgot_passwordQ"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clInputFields"

            />


        <Button
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            style="@style/big_btn"
            android:text="@string/login"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tvForget" />



        <TextView
            android:id="@+id/tvOR"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_btn"

            />
   <TextView
            android:id="@+id/tvSiginWith"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:text="@string/signinwith"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvOR"

            />



        <LinearLayout
            android:id="@+id/llOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSiginWith"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon"
                android:layout_marginRight="@dimen/_10sdp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_icon"/>


        </LinearLayout>




        <LinearLayout
            android:id="@+id/llSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_15sdp">


            <TextView
                android:id="@+id/create_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/create_account"/>

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:text="@string/sign_up"/>

        </LinearLayout>
        <ProgressBar
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressbar_downloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>